<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_inventory_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="100dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cse403.finderskeepers.HomePage"
    tools:showIn="@layout/activity_additem">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit item"
        android:textSize="40dp"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/gray_plus"
        android:id="@+id/add_item_img"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:background="#FFFFFF"
        android:layout_weight="5"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/item_add_tags_hint"
        android:id="@+id/editTags" />

    <Button
        android:text="Add Item"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/upload_button"
        android:layout_weight="1"/>

</LinearLayout>