<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_other_user_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="70dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
...
        android:layout_weight="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/propose_trade_text"
        android:id="@+id/propose_trade"
        android:layout_weight="1"/>

</LinearLayout>

