...
    <string name="action_browse_users">Browse Users</string>
    <string name="title_activity_other_user_page">OtherUserPageActivity</string>
    <string name="other_user_items_text">User\'s Items</string>
    <string name="other_user_tags_text">User\'s Tags</string>
    <string name="title_activity_other_user_item_view">OtherUserItemViewActivity</string>
    <string name="view_tags">Tags</string>
    <string name="propose_trade_text">Propose Trade</string>
    <string name="title_activity_propose_trade">ProposeTradeActivity</string>
    <string name="this_user_items_text">Your Items</string>
    <string name="this_user_selected_items_text">Your Chosen Items</string>
    <string name="their_items_text">Their Items</string>
    <string name="their_selected_items_text">Their Chosen Items</string>
    <string name="send_trade_text">Send Trade Request</string>
    <string name="title_activity_view_trades">ViewTradesActivity</string>
    <string name="incoming_trades_text">Incoming Trades</string>
    <string name="outgoing_trades_text">Outgoing Trades</string>
    <string name="completed_trades_text">Completed Trades</string>
    <string name="title_activity_view_user_trade">ViewUserTradeActivity</string>
    <string name="accept_trade_text">Accept Trade</string>
...
