/*
package cse403.finderskeepers;


import android.support.test.espresso.ViewInteraction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
import static android.support.test.espresso.action.ViewActions.replaceText;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withParent;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
*
 * Tests wishlist functionality on the userpage


@LargeTest
@RunWith(AndroidJUnit4.class)
public class UserPageTagTest {

    @Rule
    public ActivityTestRule<SignInActivity> mActivityTestRule = new ActivityTestRule<>(SignInActivity.class);

    @Test
    public void userPageTagTest() {
        //Press the sign in button
        ViewInteraction rc = onView(
                allOf(withText("Sign in"),
                        withParent(allOf(withId(R.id.sign_in_button),
                                withParent(withId(R.id.content_sign_in)))),
                        isDisplayed()));
        rc.perform(click());

        //Select tags text field
        ViewInteraction appCompatEditText = onView(
                allOf(withId(R.id.edit_tags),
                        withParent(withId(R.id.content_home_page)),
                        isDisplayed()));
        appCompatEditText.perform(replaceText("Tag"), closeSoftKeyboard());

        //Select update tags
        ViewInteraction appCompatButton = onView(
                allOf(withId(R.id.update_tags), withText("Update Tags"),
                        withParent(withId(R.id.content_home_page)),
                        isDisplayed()));
        appCompatButton.perform(click());

    }

}
*/
